@@ -1,3 +1,9 @@
+2012-02-26  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* Add matlab/FiltersToolbox/blockproc3.m:
+
+	- BLOCKPROC3 Block processing for a 3D image.
+
 2012-02-24  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* matlab/FileFormatToolbox/scinrrd_load.m (v0.2.4):
